# hippmem

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  README.md  SECURITY.md
crates/hippmem-consolidation/: Cargo.toml  README.md
crates/hippmem-consolidation/src/: compaction.rs  decay.rs  hebbian.rs  lib.rs  summarize.rs  worker.rs
crates/hippmem-consolidation/tests/: cycle.rs  decay.rs  summarize.rs  worker.rs
crates/hippmem-core/: Cargo.toml  README.md
crates/hippmem-core/src/: config.rs  error.rs  hash.rs  ids.rs  lib.rs  rng.rs  score.rs  time.rs
crates/hippmem-core/src/model/: enums.rs  links.rs  mod.rs  understanding.rs  unit.rs
crates/hippmem-core/tests/: clock_rng.rs  config.rs  enums.rs  error.rs  hash_tokenize.rs  model_roundtrip.rs  newtypes.rs
crates/hippmem-core/tests/fixtures/model_roundtrip/: en.json  zh.json
crates/hippmem-core/tests/fixtures/tokenization/: en.json  zh.json
crates/hippmem-engine/: Cargo.toml  README.md
crates/hippmem-engine/examples/: agent_session.rs  basic_usage.rs  consolidation_cycle.rs  project_memory.rs  seed_100.rs
crates/hippmem-engine/examples/fixtures/seed_100/: en.json  zh.json
crates/hippmem-engine/src/: consolidate_api.rs  dump_api.rs  explain_api.rs  feedback_api.rs  inspect_api.rs  lib.rs  list_api.rs  retrieve_api.rs  runtime.rs  traverse_api.rs  write_api.rs
crates/hippmem-engine/tests/: channel_calibration_e2e.rs  compliance.rs  comprehensive_100.rs  consolidate.rs  consolidate_cycle.rs  dump_e2e.rs  enrich.rs  explain_inspect.rs  feedback.rs  list_e2e.rs  open_close.rs  reindex_e2e.rs  retrieve_e2e.rs  retrieve_golden.rs  traverse_e2e.rs  write_e2e.rs
crates/hippmem-engine/tests/fixtures/channel_calibration/: en.json  zh.json
crates/hippmem-engine/tests/fixtures/comprehensive_100/: en.json  zh.json
crates/hippmem-engine/tests/fixtures/write_e2e/: en.json  zh.json
crates/hippmem-eval/: Cargo.toml  README.md
crates/hippmem-eval/examples/: README.md  diagnose_p1_miss.rs  write_perf_profile.rs
crates/hippmem-eval/fixtures/bench/en/: README.md  diagnostic_dataset.json  diagnostic_queries.json  mem0_comparison_dataset.json  mem0_comparison_queries.json  quick_bench_dataset.json  quick_bench_queries.json  retrieval_quality_categories.json  retrieval_quality_queries.json  user_perspective_categories.json  user_perspective_queries.json
crates/hippmem-eval/fixtures/bench/zh/: README.md  diagnostic_dataset.json  diagnostic_queries.json  mem0_comparison_dataset.json  mem0_comparison_queries.json  quick_bench_dataset.json  quick_bench_queries.json  retrieval_quality_categories.json  retrieval_quality_queries.json  user_perspective_categories.json  user_perspective_queries.json
crates/hippmem-eval/fixtures/corpus/en/: README.md  causal-chain-001.json  causal-trace-001.json  causal-trace-002.json  causal-trace-003.json  causal-trace-004.json  causal-trace-005.json  contradiction-detection-001.json  contradiction-detection-002.json  contradiction-detection-003.json  contradiction-detection-004.json  contradiction-detection-005.json  entity-network-001.json  explanation-quality-001.json  explanation-quality-002.json  explanation-quality-003.json  explanation-quality-004.json  explanation-quality-005.json  fact-recall-001.json  fact-recall-002.json  fact-recall-003.json  fact-recall-004.json  fact-recall-005.json  implicit-association-001.json  implicit-association-002.json  implicit-association-003.json  implicit-association-004.json  implicit-association-005.json  long-tail-recall-001.json  long-tail-recall-002.json  long-tail-recall-003.json  long-tail-recall-004.json  long-tail-recall-005.json  multi-dim-assoc-001.json  noise-resistance-001.json  noise-resistance-002.json  noise-resistance-003.json  noise-resistance-004.json  noise-resistance-005.json  preference-recall-001.json  (+14 more)
crates/hippmem-eval/fixtures/corpus/zh/: README.md  causal-chain-001.json  causal-trace-001.json  causal-trace-002.json  causal-trace-003.json  causal-trace-004.json  causal-trace-005.json  contradiction-detection-001.json  contradiction-detection-002.json  contradiction-detection-003.json  (+44 more)
crates/hippmem-eval/src/: baselines.rs  bench_corpus.rs  corpus.rs  fixture_loader.rs  lib.rs  metrics.rs  runner.rs
crates/hippmem-eval/tests/: bench_mem0_comparison.rs  bench_personal_memory.rs  bench_user_perspective.rs  integ_full_corpus.rs  integ_quick_bench.rs  integ_retrieval_quality.rs  unit_corpus_types.rs  unit_thresholds.rs
crates/hippmem-eval/tests/common/: mod.rs
crates/hippmem-grpc/: Cargo.toml  README.md  build.rs
crates/hippmem-grpc/proto/: hippmem.proto
crates/hippmem-grpc/src/: lib.rs  service.rs
crates/hippmem-model/: Cargo.toml  README.md
crates/hippmem-model/src/: error.rs  lib.rs  registry.rs  traits.rs
crates/hippmem-model/src/api/: anthropic.rs  cohere.rs  mod.rs  openai.rs
crates/hippmem-model/src/deterministic/: embed.rs  extract.rs  mod.rs  rerank.rs  summarize.rs
crates/hippmem-model/src/lang/: en.rs  mod.rs  zh.rs
crates/hippmem-model/tests/: api_mock.rs  contract.rs  deterministic_embed.rs  deterministic_extract.rs  deterministic_rerank.rs  deterministic_summarize.rs
crates/hippmem-retrieval/: Cargo.toml  README.md
crates/hippmem-retrieval/src/: energy.rs  explain.rs  lib.rs  rerank.rs  seeds.rs  spreading.rs  warnings.rs
crates/hippmem-retrieval/tests/: explain.rs  pipeline.rs  seeds.rs  spreading.rs
crates/hippmem-store/: Cargo.toml  README.md
crates/hippmem-store/src/: activation_log.rs  fulltext.rs  graph.rs  kv.rs  lib.rs  memory_log.rs  store.rs
crates/hippmem-store/src/semantic/: binary.rs  hnsw.rs  mod.rs  vector_index.rs
crates/hippmem-store/tests/: bm25.rs  inverted.rs  log_kv.rs  open_close.rs  semantic.rs  stats.rs
crates/hippmem-write/: Cargo.toml  README.md
crates/hippmem-write/src/: candidates.rs  edges.rs  enrich.rs  explain.rs  keys.rs  lib.rs  scoring.rs  staged.rs  understanding.rs
crates/hippmem-write/tests/: candidates.rs  edges.rs  enriched_index.rs  keys.rs  pipeline.rs  scoring.rs
(+48 files in other folders)
