[workspace]
resolver = "2"
members = [
    "crates/hippmem-consolidation",
    "crates/hippmem-core",
    "crates/hippmem-engine",
    "crates/hippmem-grpc",
    "crates/hippmem-model",
    "crates/hippmem-retrieval",
    "crates/hippmem-store",
    "crates/hippmem-write",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/hippmem/hippmem"
homepage = "https://github.com/hippmem/hippmem"
authors = ["hippmem <hippmem@gmail.com>"]
rust-version = "1.95"

[workspace.dependencies]
# Serialization (ADR-005)
serde = { version = "1", features = ["derive"] }
bincode = { version = "2", features = ["serde"] }
serde_json = "1"

# ID & Time (ADR-006/007)
ulid = "1"
time = { version = "0.3", features = ["serde"] }
rand = "0.9"

# Config (ADR-008)
figment = { version = "0.10", features = ["toml", "env"] }
toml = "0.8"

# Error handling (ADR-009)
thiserror = "2"
anyhow = "1"

# async runtime (ADR-010)
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
async-trait = "0.1"

# Testing (ADR-014)
proptest = "1"
insta = "1"

# Observability (ADR-015)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Concurrency (ADR-017)
parking_lot = "0.12"
dashmap = "6"

# Storage (ADR-001)
redb = "3"

# Full-text index (ADR-002)
tantivy = "0.22"

# Text & hashing (ADR-018/019)
jieba-rs = "0.7"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Test helpers
tempfile = "3"
