[package]
name = "hippmem-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Core domain types for HIPPMEM — MemoryUnit, AssociationLink, ActivationState, Clock/Rng traits, base error types"
publish = false
keywords = ["memory", "ai", "agent", "associative", "data-model"]
categories = ["data-structures"]
documentation = "https://docs.rs/hippmem-core"

[dependencies]
serde.workspace = true
thiserror.workspace = true
time.workspace = true
ulid.workspace = true
xxhash-rust.workspace = true
rand.workspace = true
jieba-rs.workspace = true
figment.workspace = true

[dev-dependencies]
bincode.workspace = true
serde_json.workspace = true
proptest.workspace = true
toml.workspace = true
