[package]
name = "hippmem-write"
version.workspace = true
edition.workspace = true
license = "AGPL-3.0-only"
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Write engine for HIPPMEM — AssociationKeys generation, multi-dimensional candidate discovery, association scoring and edge creation"
readme = "README.md"
publish = false
keywords = ["memory", "associative", "knowledge-graph", "extraction", "scoring"]
categories = ["algorithms", "text-processing"]
documentation = "https://docs.rs/hippmem-write"

[dependencies]
hippmem-core = { path = "../hippmem-core", version = "0.1.0" }
hippmem-model = { path = "../hippmem-model", version = "0.1.0" }
hippmem-store = { path = "../hippmem-store", version = "0.1.0" }
xxhash-rust.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
